fix overlap

--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,10 @@
   overflow: hidden;
 }
 
+.presence.off-screen .avatar {
+  visibility: hidden;
+}
+
 .avatar img {
   width: 16px;
   border: 2px solid white;
